[package]
name = "bls-signature-example_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ethereum-types = "0.9.2"
eth-types =  { path = "../rainbow-bridge/contracts/near/eth-types" }
eth2-utility =  { path = "../rainbow-bridge/contracts/near/eth2-utility" }
tree_hash = { git = "https://github.com/aurora-is-near/lighthouse.git", rev = "b624c3f0d3c5bc9ea46faa14c9cb2d90ee1e1dec" }
merkle_proof = { git = "https://github.com/aurora-is-near/lighthouse.git", rev = "b624c3f0d3c5bc9ea46faa14c9cb2d90ee1e1dec" }
bls = { git = "https://github.com/aurora-is-near/lighthouse.git", optional = true, rev = "b624c3f0d3c5bc9ea46faa14c9cb2d90ee1e1dec", default-features = false, features = ["milagro"]}
admin-controlled =  { path = "../rainbow-bridge/contracts/near/admin-controlled" }
near-sdk = "4.0.0"
borsh = "0.9.3"
bitvec = "1.0.0"

[dev-dependencies]
near-primitives = "0.14.0"
workspaces = "0.6"
tokio = { version = "1.1", features = ["rt", "macros"] }
serde_json = "1.0.74"
test-utils = { path = "test-utils" }

[patch]
[patch.crates-io]
eth2_hashing = { path = "../rainbow-bridge/contracts/near/eth2_hashing" }
